--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -158,4 +158,9 @@
         width: 100%;
         align-items: stretch;
     }
+
+    .imagePlaceholder {
+        width: 200px;
+        height: 200px;
+    }
 }
